      (update_percentage): ditto
      (end_percentage): ditto

    Encapsulate Status members.

    * utilities/status.py:
      - pre-Text -> _pretext
      - percentage -> _percentage
      - overwriteLine -> _overwrite
      - percentFormat -> _percent_fmt
      - textLength -> _text_len
      (update_percentage): member name changes
      (end_percentage): ditto
      (write): ditto

    

2013-08-13	tboggs <tboggs@users.sourceforge.net>

    Added `imshow` wrapper around matplotlib's imshow.

    * graphics/__init__.py: Import `imshow`.
    * graphics/graphics.py(imshow): New function.

    Automatically determine image format in `save_rgb`.

    * graphics/graphics(save_rgb): Let PIL determine image format.

    Add image band info to saved file. Corrected band_quantity member name.

    * io/envi.pi:
      (open): BandInfo member changed from "bandQuantity" to "band_quantity".
      (SpectralLibrary.__init__): Ditto
      (save_image): Include band info from image being saved, unless metadata
      arg already contains the values.
      (add_band_info_to_metadata): New function.

2013-08-12	tboggs <tboggs@users.sourceforge.net>

    Added windowed mode to the RX anomaly detector.

    * algorithms/__init__.py: Import `MatchedFilter` and `rx`.
    * algorithms/detectors.py:
      (RXW): New class for windowed RX algorithm.
      (rx): New function for implementing RX, creating an `RX` or `RXW`
      object, as needed.
      (window_mask_creator): New function for creating image window masks.
      (rx_numpy_masked_arrays): A new file, promptly deleted, which used
      numpy.ma for masked arrays but was ~8x slower than just extracting
      pixels from the window.
      (window_mask_creator_numpy_masked_arrays): Mask creator for the
      `rx_numpy_masked_arrays` function.

2013-08-10	tboggs <tboggs@users.sourceforge.net>

    Accept ndarray as `top` keyword in view_cube.

    * graphics/graphics.py:
      (view_cube): Update doc string.